--- a/loopstudios-landing-page/css/pages/_landing.scss
+++ b/loopstudios-landing-page/css/pages/_landing.scss
@@ -86,11 +86,11 @@ body {
     row-gap: clamp(8rem, calc(15.817rem - 16.285vw), 12rem);
 
     @media (min-width: a.$media-desktop) {
-      margin: 0;
+      padding: 0;
       background-color: unset;
       box-shadow: unset;
       position: unset;
-      display: unset;
+      display: block;
     }
   }
 
@@ -107,7 +107,6 @@ body {
 
   &__link:link,
   &__link:visited {
-    text-decoration: none;
     font-size: 1.5rem;
     color: var(--colors-white);
 
@@ -229,84 +228,131 @@ body {
   }
 
   &__card {
+    --overlay: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.6) 25%,
+      50%,
+      rgba(0, 0, 0, 0) 75%
+    );
     min-height: a.rem(120);
     color: var(--colors-white);
     background-size: cover;
     display: grid;
     align-items: flex-end;
+    transition: all 0.3s ease-in-out;
 
     &:nth-child(1) {
-      background-image: url("../images/mobile/image-deep-earth.jpg");
+      background-image: var(--overlay),
+        url("../images/mobile/image-deep-earth.jpg");
     }
 
     &:nth-child(2) {
-      background-image: url("../images/mobile/image-night-arcade.jpg");
+      background-image: var(--overlay),
+        url("../images/mobile/image-night-arcade.jpg");
     }
 
     &:nth-child(3) {
-      background-image: url("../images/mobile/image-soccer-team.jpg");
+      background-image: var(--overlay),
+        url("../images/mobile/image-soccer-team.jpg");
     }
 
     &:nth-child(4) {
-      background-image: url("../images/mobile/image-grid.jpg");
+      background-image: var(--overlay), url("../images/mobile/image-grid.jpg");
     }
 
     &:nth-child(5) {
-      background-image: url("../images/mobile/image-from-above.jpg");
+      background-image: var(--overlay),
+        url("../images/mobile/image-from-above.jpg");
     }
 
     &:nth-child(6) {
-      background-image: url("../images/mobile/image-pocket-borealis.jpg");
+      background-image: var(--overlay),
+        url("../images/mobile/image-pocket-borealis.jpg");
     }
 
     &:nth-child(7) {
-      background-image: url("../images/mobile/image-curiosity.jpg");
+      background-image: var(--overlay),
+        url("../images/mobile/image-curiosity.jpg");
     }
 
     &:nth-child(8) {
-      background-image: url("../images/mobile/image-fisheye.jpg");
+      background-image: var(--overlay),
+        url("../images/mobile/image-fisheye.jpg");
     }
 
     @media (min-width: a.$media-desktop) {
       min-height: a.rem(450);
+      --overlay: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.6) 25%,
+        50%,
+        rgba(0, 0, 0, 0) 75%
+      );
 
       &:nth-child(1) {
-        background-image: url("../images/desktop/image-deep-earth.jpg");
+        background-image: var(--overlay),
+          url("../images/desktop/image-deep-earth.jpg");
       }
 
       &:nth-child(2) {
-        background-image: url("../images/desktop/image-night-arcade.jpg");
+        background-image: var(--overlay),
+          url("../images/desktop/image-night-arcade.jpg");
       }
 
       &:nth-child(3) {
-        background-image: url("../images/desktop/image-soccer-team.jpg");
+        background-image: var(--overlay),
+          url("../images/desktop/image-soccer-team.jpg");
       }
 
       &:nth-child(4) {
-        background-image: url("../images/desktop/image-grid.jpg");
+        background-image: var(--overlay),
+          url("../images/desktop/image-grid.jpg");
       }
 
       &:nth-child(5) {
-        background-image: url("../images/desktop/image-from-above.jpg");
+        background-image: var(--overlay),
+          url("../images/desktop/image-from-above.jpg");
       }
 
       &:nth-child(6) {
-        background-image: url("../images/desktop/image-pocket-borealis.jpg");
+        background-image: var(--overlay),
+          url("../images/desktop/image-pocket-borealis.jpg");
       }
 
       &:nth-child(7) {
-        background-image: url("../images/desktop/image-curiosity.jpg");
+        background-image: var(--overlay),
+          url("../images/desktop/image-curiosity.jpg");
       }
 
       &:nth-child(8) {
-        background-image: url("../images/desktop/image-fisheye.jpg");
+        background-image: var(--overlay),
+          url("../images/desktop/image-fisheye.jpg");
       }
     }
+
+    &:hover {
+      --overlay: linear-gradient(
+        rgba(255, 255, 255, 0.5),
+        rgba(255, 255, 255, 0.5)
+      );
+
+      & .creations__subtitle {
+        color: var(--colors-black);
+      }
+    }
+  }
+
+  &__link {
+    height: 100%;
+    display: grid;
   }
 
   &__subtitle {
     margin: clamp(1.25rem, calc(0.393rem + 1.786vw), 2rem)
       clamp(1.25rem, calc(0.81rem + 1.878vw), 2.5rem);
+    align-self: flex-end;
+    color: var(--colors-white);
+    text-align: start;
   }
 
   &__btn {
@@ -377,7 +423,6 @@ body {
     flex-direction: column;
     gap: 1rem;
     font-size: a.rem(15);
-    text-align: center;
     line-height: a.rem(25);
 
     @media (min-width: a.$media-tablet) {
@@ -387,7 +432,6 @@ body {
 
   &__link:link,
   &__link:visited {
-    text-decoration: none;
     color: var(--colors-white);
   }
 
@@ -400,6 +444,11 @@ body {
     @media (min-width: a.$media-tablet) {
       justify-self: flex-end;
     }
+  }
+
+  &__social {
+    width: 1.5rem;
+    height: 1.5rem;
   }
 
   &__copyright {
