--- a/loopstudios-landing-page/css/pages/_landing.scss
+++ b/loopstudios-landing-page/css/pages/_landing.scss
@@ -147,16 +147,21 @@ body {
 }
 
 .splash {
-  margin-bottom: a.rem(96);
+  --overlay: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+  margin-bottom: 6rem;
   height: a.rem(650);
-  background-image: url("../images/mobile/image-hero.jpg");
+  background-image: var(--overlay), url("../images/mobile/image-hero.jpg");
   background-size: cover;
   background-position: center;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
 
   @media (min-width: a.$media-tablet) {
-    background-image: url("../images/desktop/image-hero.jpg");
+    background-image: var(--overlay), url("../images/desktop/image-hero.jpg");
+  }
+
+  @media (min-width: a.$media-desktop) {
+    margin-bottom: 10rem;
   }
 }
 
