--- a/loopstudios-landing-page/css/style.css
+++ b/loopstudios-landing-page/css/style.css
@@ -282,9 +282,10 @@ body {
 }
 
 .splash {
+  --overlay: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
   margin-bottom: 6rem;
   height: 40.625rem;
-  background-image: url("../images/mobile/image-hero.jpg");
+  background-image: var(--overlay), url("../images/mobile/image-hero.jpg");
   background-size: cover;
   background-position: center;
   display: grid;
@@ -292,7 +293,12 @@ body {
 }
 @media (min-width: 48rem) {
   .splash {
-    background-image: url("../images/desktop/image-hero.jpg");
+    background-image: var(--overlay), url("../images/desktop/image-hero.jpg");
+  }
+}
+@media (min-width: 90rem) {
+  .splash {
+    margin-bottom: 10rem;
   }
 }
 
