--- a/room-homepage/css/style.css
+++ b/room-homepage/css/style.css
@@ -75,42 +75,79 @@ h3 {
   text-transform: uppercase;
 }
 
-.carousel {
+.carousel__imgs {
   display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: 100%;
   overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  anchor-name: --carousel;
-  scrollbar-width: none;
+  anchor-name: --carousel-imgs;
 }
 @media (prefers-reduced-motion: no-preference) {
-  .carousel {
+  .carousel__imgs {
     scroll-behavior: smooth;
   }
 }
-.carousel::-webkit-scrollbar {
+.carousel__imgs::-webkit-scrollbar {
   display: none;
 }
-.carousel > li {
+.carousel__imgs > li {
   scroll-snap-align: center;
+  grid-row: 1;
+  grid-column: 1;
 }
-.carousel > li > img {
+.carousel__img {
   width: 100%;
+  height: 360px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: relative;
 }
-.carousel::scroll-button(*) {
-  width: 40px;
+.carousel__btns {
+  z-index: 3;
   position: absolute;
-  position-anchor: --carousel;
-  position-area: span-block-start span-inline-start;
+  position-anchor: --carousel-imgs;
+  inset-block-end: anchor(end);
+  inset-inline-end: anchor(end);
+  display: flex;
 }
-.carousel::scroll-button(inline-end) {
-  content: "right";
+.carousel__btn {
+  height: 56px;
+  width: 56px;
+  background-color: var(--colors-black);
+  display: grid;
+  place-content: center;
+  transition: background-color 0.5s ease;
 }
-.carousel::scroll-button(inline-start) {
-  content: "left";
-  transform: translateX(-100%);
+.carousel__btn:hover {
+  background-color: var(--colors-grey);
 }
-.carousel::scroll-button(*):disabled {
-  opacity: 0.8;
+
+@keyframes slide-in-right {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+@keyframes slide-in-left {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+.slid-in {
+  z-index: 1;
+}
+
+.slide-in-right {
+  z-index: 2;
+  animation: slide-in-right 1s ease-in both;
+  transition: z-index 0s;
+}
+
+.slide-in-left {
+  z-index: 2;
+  animation: slide-in-left 1s ease-in both;
+  transition: z-index 0s;
 }/*# sourceMappingURL=style.css.map */
